airflow/logs/dag_id=sensor_data_consumer/run_id=manual__2024-11-02T04:06:18.979612+00:00/task_id=sensor_data_consumer/attempt=1.log
[2024-11-02T04:06:34.920+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-11-02T04:06:35.048+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: sensor_data_consumer.sensor_data_consumer manual__2024-11-02T04:06:18.979612+00:00 [queued]>
[2024-11-02T04:06:35.085+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: sensor_data_consumer.sensor_data_consumer manual__2024-11-02T04:06:18.979612+00:00 [queued]>
[2024-11-02T04:06:35.087+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-11-02T04:06:35.178+0000] {taskinstance.py:2330} INFO - Executing <Task(SparkSubmitOperator): sensor_data_consumer> on 2024-11-02 04:06:18.979612+00:00
[2024-11-02T04:06:35.209+0000] {standard_task_runner.py:64} INFO - Started process 389 to run task
[2024-11-02T04:06:35.228+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'sensor_data_consumer', 'sensor_data_consumer', 'manual__2024-11-02T04:06:18.979612+00:00', '--job-id', '495', '--raw', '--subdir', 'DAGS_FOLDER/***_consumer.py', '--cfg-path', '/tmp/tmpg7qr62nw']
[2024-11-02T04:06:35.232+0000] {standard_task_runner.py:91} INFO - Job 495: Subtask sensor_data_consumer
[2024-11-02T04:06:35.666+0000] {task_command.py:426} INFO - Running <TaskInstance: sensor_data_consumer.sensor_data_consumer manual__2024-11-02T04:06:18.979612+00:00 [running]> on host b503d98b76db
[2024-11-02T04:06:36.032+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Bich Ly' AIRFLOW_CTX_DAG_ID='sensor_data_consumer' AIRFLOW_CTX_TASK_ID='sensor_data_consumer' AIRFLOW_CTX_EXECUTION_DATE='2024-11-02T04:06:18.979612+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-11-02T04:06:18.979612+00:00'
[2024-11-02T04:06:36.040+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-11-02T04:06:36.128+0000] {base.py:84} INFO - Using connection ID 'spark_default' for task execution.
[2024-11-02T04:06:36.132+0000] {spark_submit.py:344} INFO - Spark-Submit cmd: spark-submit --master spark://spark-master:7077 --name KafkaSparkHDFS /opt/***/dags/spark_streaming_job.py
[2024-11-02T04:06:48.036+0000] {spark_submit.py:495} INFO - File "/opt/***/dags/spark_streaming_job.py", line 31
[2024-11-02T04:06:48.040+0000] {spark_submit.py:495} INFO - .option("subscribe", "raw_data") \
[2024-11-02T04:06:48.043+0000] {spark_submit.py:495} INFO - IndentationError: unexpected indent
[2024-11-02T04:06:48.151+0000] {spark_submit.py:495} INFO - 24/11/02 04:06:48 INFO ShutdownHookManager: Shutdown hook called
[2024-11-02T04:06:48.157+0000] {spark_submit.py:495} INFO - 24/11/02 04:06:48 INFO ShutdownHookManager: Deleting directory /tmp/spark-b0fcc9f4-e18f-40bc-aff2-17ea8e7dcdd2
[2024-11-02T04:06:48.265+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-11-02T04:06:48.294+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/apache/spark/operators/spark_submit.py", line 157, in execute
    self._hook.submit(self._application)
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/providers/apache/spark/hooks/spark_submit.py", line 426, in submit
    raise AirflowException(
airflow.exceptions.AirflowException: Cannot execute: spark-submit --master spark://spark-master:7077 --name KafkaSparkHDFS /opt/***/dags/spark_streaming_job.py. Error code is: 1.
[2024-11-02T04:06:48.314+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=sensor_data_consumer, task_id=sensor_data_consumer, run_id=manual__2024-11-02T04:06:18.979612+00:00, execution_date=20241102T040618, start_date=20241102T040635, end_date=20241102T040648
[2024-11-02T04:06:48.357+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 495 for task sensor_data_consumer (Cannot execute: spark-submit --master spark://spark-master:7077 --name KafkaSparkHDFS /opt/***/dags/spark_streaming_job.py. Error code is: 1.; 389)
[2024-11-02T04:06:48.406+0000] {local_task_job_runner.py:243} INFO - Task exited with return code 1
[2024-11-02T04:06:48.480+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-11-02T04:06:48.492+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
